<resources>
    <string name="app_name">Automated</string>
    <string name="title_activity_main">数据统计</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="battery">电量</string>
    <string name="bluetooth">蓝牙</string>
    <string name="sim">SIM</string>
    <string name="wifi">Wifi</string>
    <string name="settings">设置</string>
    <string name="global">全局</string>
    <string name="about">关于</string>
    <string name="set_battery_time">配置电量轮询时间</string>
    <string name="set_bluetooth_time">配置蓝牙轮询时间</string>
    <string name="set_sim_time">配置SIM轮询时间</string>
    <string name="set_wifi_time">配置wifi轮询时间</string>
    <string name="operation_failed">操作失败</string>
    <string name="operation_successful">操作成功</string>
    <string name="time">时间</string>
    <string name="cdma">CDMA</string>
    <string name="lte">LTE</string>
    <string name="action_clear">清除数据</string>
</resources>
