<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_battery"
            android:icon="@drawable/ic_menu_battery"
            android:title="@string/battery"/>
        <item
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_menu_bluetooth"
            android:title="@string/bluetooth"/>
        <item
            android:id="@+id/nav_sim"
            android:icon="@drawable/ic_menu_sim"
            android:title="@string/sim"/>
        <item
            android:id="@+id/nav_wifi"
            android:icon="@drawable/ic_menu_wifi"
            android:title="@string/wifi"/>
    </group>

    <item android:title="@string/global">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>
